# simple-rag-chat

./: .pre-commit-config.yaml  README.md  pyproject.toml
.chainlit/: chainlit.yml  config.toml
app/: app.py  document_manager.py  documents.py  prompts.py
