[tool.isort]
profile = "black"
filter_files = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.poetry]
name = "simple-rag-chat"
version = "0.1.0"
description = ""
authors = ["Brendan Smith <mail@brendansmith.ai>"]
readme = "README.md"
packages = [{include = "simple-rag-chat"}]

[tool.poetry.dependencies]
python = "~3.10"
openai = "^1.3.5"
langchain = "^0.2.3"
chainlit = "^0.7.604"
tiktoken = "^0.5.1"
pdfplumber = "^0.10.3"
chromadb = "^0.4.17"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"
isort = "^5.12.0"

[tool.ruff]
target-version = "py310"
line-length = 80
select = [
    "E", "W",  # see: https://pypi.org/project/pycodestyle
    "F",  # see: https://pypi.org/project/pyflakes
]
ignore = [
    "E402",  # Module level import not at top of file, due to Chroma hacks
    "E501",
    "E731",
    "E741",  # Ambiguous variable name: ...
    "E999",  # SyntaxError: invalid syntax. Got unexpected token Newline
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
ignore-init-module-imports = true
per-file-ignores = {}
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.mccabe]
max-complexity = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
